--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "name": "Tip-calculator app",
-  "short_name": "tip-cal",
+  "short_name": "tip-calculator",
   "start_url": "./index.html",
   "description": "calculate tip on the fly",
+  "id": "tip-calculator",
   "serviceworker": {
     "src": "./serviceWorker.js"
   },
@@ -10,6 +11,31 @@
     {
       "src": "./images/logo.svg",
       "sizes": "87x54",
+      "type": "image/svg"
+    },
+    {
+      "src": "./images/app-icon.png",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/Moha_tangx logo.jpg",
+      "sizes": "540x540",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icon-arrow.svg",
+      "sizes": "144x144",
+      "type": "image/svg"
+    },
+    {
+      "src": "./images/logo-big.svg",
+      "sizes": "144x144",
+      "type": "image/svg"
+    },
+    {
+      "src": "./images/logo-big.svg",
+      "sizes": "512x512",
       "type": "image/svg"
     }
   ],
